# paper-curator

./: .env.example  .gitignore  README.md  arxiv_curator.py  crontab_config.txt  fix_email.sql  init_tables.py  migrate_unsent_papers.py  pyproject.toml  requirements.txt  setup.sh  topics.example.yaml  topics.yaml
prompts/: filter_prompt.txt  summary_prompt.txt
