[project]
name = "paper-curator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic==0.62.0",
    "arxiv==2.1.3",
    "ezgmail==2024.12.3",
    "numpy==2.1.1",
    "pandas==2.3.1",
    "postmarker==1.0.0",
    "pypdf==5.9.0",
    "pypdf2>=3.0.1",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.1.1",
    "pyyaml>=6.0.2",
    "requests==2.32.4",
]
